--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %} 
 
 {% block title %} index {% endblock %}
+
 {% block content %}
-<h3>Hello index!</h3>
+<section class="section">
+    <div class="container">
+      <h1 class="title">
+        Hello World
+      </h1>
+      <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+      </p>
+    </div>
+  </section>
 {% endblock %}
+
